# chip8-emulator

./: .gitignore  Cargo.toml  README.md  temp.txt
shaders/: shader.wgsl
src/: chip8.rs  chip8handler.rs  chip_handler.rs  main.rs  render.rs  screen.rs  sound.rs  texture.rs
src/chip8/: buzzer.rs  cpu.rs  event.rs  keyboard.rs  screen.rs  square_wave.rs  stack.rs
src/chip_handler/: buzzer.rs  chip8.rs  event.rs  keyboard.rs  screen.rs
