[package]
name = "chip8-emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.29.10"
wgpu = "0.19.0"
bytemuck = {version = "1.14.0", features = ["derive"]}
rodio = "0.17.3"
futures = "0.3.30"
